<resources>
    <string name="app_name">wanttofly</string>
    <string name="want_to_fly_box_logo">Want to fly box logo</string>
    <string name="onboarding_slide_1_header">Powerful <b>visualization</b> tools</string>
    <string name="onboarding_slide_1_subHeader">Easy to understand with user friendly charts and graphs.</string>
    <string name="onboarding_slide_2_header">Find the <b>best</b> airlines</string>
    <string name="onboarding_slide_2_subHeader">Search and filter with various parameters to find only the best.</string>
    <string name="onboarding_slide_3_header"><b>See</b> what others are saying</string>
    <string name="onboarding_slide_3_subHeader">Make well informed decisions by viewing past and present comments</string>

    <string name="onboarding_guide">onboarding_guide</string>
    <string name="get_started">Get started</string>
    <string name="skip_and_see_awesomeness">Skip and see awesomeness</string>

    <string name="visualize_reliability">Visualize reliability</string>
    <string name="search_by_flight_number">Search by flight number</string>
    <string name="recent">Recent</string>
    <string name="trending">Trending</string>
    <string name="advanced_search_icon">advanced search icon</string>

    <string name="hashtag">#</string>
    <string name="no_results_found">No results found</string>
    <string name="try_searching_again">Try searching again</string>
    <string name="dt_field_heading"><![CDATA[DELAY &\nCANCELLATION]]></string>
    <string name="save">Save</string>
    <string name="sort_by">Sort by</string>
    <string name="on_time">On Time</string>
    <string name="delayed">Delayed</string>
    <string name="cancelled">Cancelled</string>

    <string name="safe_travels">We wish you safe travels.</string>
    <string name="one_line_summary_on_time">Flight #%s to \n%s \nlooks good to go.</string>
    <string name="one_line_summary_delayed">Flight #%s to \n%s \nlooks to be delayed.</string>
    <string name="one_line_summary_cancelled">Flight #%s \nto %s \nhas unfortunately been cancelled.</string>
    <string name="more_information">More information</string>

    <string name="very_high_flight_score">Very high chance that your flight is on time.</string>
    <string name="high_flight_score">High chance that your flight is on time.</string>
    <string name="low_flight_score">Expect possible flight delays.</string>
    <string name="cancelled_flight_score">This flight has been cancelled.</string>
    <string name="no_flight_score">Sorry, we couldn\'t not find a flight rating.</string>
    <string name="swoopair_we_wanttofly_bunch_of_cancellations_and_delays_here">\@SwoopAir we #WantToFly, bunch of cancellations and delays here</string>

    <string name="flight_rating_info">The flight rating score you see inside the donut chart is calculated based on our proprietary prediction model.</string>
    <string name="flight_weather_info">The weather info field provides information regarding the destination weather details which includes:\nCurrent Temperature\nMax and Min Temperature\nWind Speed\nPrecipitation</string>
    <string name="delay_cancel_info">The pie chart provides information regarding the probability of this flight being \'on time\', \'delayed\', or \'cancelled\'.</string>
</resources>