<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_gray"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/iv_illustration"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_onboarding_illustration_1"
        android:contentDescription="@string/onboarding_guide" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:textAlignment="center"
        android:textAppearance="@style/header"
        app:layout_constraintTop_toBottomOf="@id/iv_illustration"
        tools:text="@string/onboarding_slide_1_header"/>

    <TextView
        android:id="@+id/tv_subHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:textAppearance="@style/subHeader"
        app:layout_constraintTop_toBottomOf="@id/tv_header"
        tools:text="@string/onboarding_slide_1_subHeader"/>

</androidx.constraintlayout.widget.ConstraintLayout>